--- a/src/main/resources/application-app.properties
+++ b/src/main/resources/application-app.properties
@@ -6,3 +6,5 @@ spring.datasource.password=admin
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 mybatis.mapper-locations=cn/zz/com/timer/*/mapper/*Mapper.xml
+#设定ftl文件路径
+spring.freemarker.template-loader-path=classpath:/templates/
